# CPP_matrixplus

./: CMakeLists.txt  Makefile  README.md  S21Matrix.cpp  S21Matrix.h  a.out  main.cpp  s21_accessor_mutator.cpp  s21_constructors.cpp  s21_functions.cpp  s21_matrix_oop.cpp  s21_matrix_oop.h  s21_operators.cpp  s21_others.cpp
arithmetic/: s21_functions.cpp
comparison/: s21_others.cpp
core/: s21_accessor_mutator.cpp  s21_constructors.cpp
dublicate/: CMakeLists.txt  main.cpp  s21_matrix_oop.cpp  s21_matrix_oop.h
dublicate/test/: test_functions.cpp
operators/: s21_operators.cpp
test/: test_constructors.cpp  test_functions.cpp
tests/: test_functions.cpp
why_is_not_working/: s21_acc_mut.cpp  s21_operators.cpp
